--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,7 @@ services:
       - postgres_data:/var/lib/postgresql/data
     ports:
       - 5432:5432
+
   backend:
     build:
       context: ./backend
@@ -25,5 +26,16 @@ services:
     depends_on:
       - db
 
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - 5173:80
+    depends_on:
+      - backend
+
+
 volumes:
   postgres_data:
+
