--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -10,14 +10,14 @@ RUN curl -sSL https://install.python-poetry.org | python3 -
 
 ENV PATH="/root/.local/bin:$PATH"
 
-WORKDIR /app
+WORKDIR /app/backend
 
-COPY pyproject.toml poetry.lock* /app/
+COPY backend/pyproject.toml backend/poetry.lock* /app/backend/
 
 RUN poetry config virtualenvs.create false \
     && poetry install --no-interaction --no-ansi --only main --no-root
 
-COPY . /app
+COPY backend/ /app/backend/
 
 EXPOSE 8000
 
