--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -2,16 +2,16 @@ FROM node:20-alpine AS build-stage
 
 WORKDIR /app
 
-COPY package*.json ./
+COPY frontend/package*.json ./
 RUN npm install
 
-COPY . /app
+COPY frontend/ /app/
 RUN npm run build
 
 FROM nginx:stable-alpine AS production-stage
 
 COPY --from=build-stage /app/dist /usr/share/nginx/html
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY frontend/nginx.conf /etc/nginx/conf.d/default.conf
 EXPOSE 80
 
 CMD ["nginx", "-g", "daemon off;"]
