--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,8 +3,7 @@ version: '3.8'
 services:
   frontend:
     build:
-      context: ./frontend
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.frontend
     ports:
       - 5173:80
     depends_on:
@@ -20,8 +19,7 @@ services:
 
   backend:
     build:
-      context: ./backend
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.backend
     ports:
       - 8000:8000
     command: >
