--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -8,4 +8,7 @@ server {
     location / {
         try_files $uri $uri/ /index.html;
     }
+    location /api/ {
+    proxy_pass http://backend:8000/api/;
+}
 }
